unpackaged/main/default/objects/Price_Book_Selector__mdt/Price_Book_Selector__mdt.object-meta.xml
<CustomObject>
    <description>To be used by automations as a referential to work out which Price Book goes where.</description>
    <label>Price Book Selector</label>
    <pluralLabel>Price Books Selector</pluralLabel>
</CustomObject>