unpackaged/main/default/objects/Price_Book_Selector__mdt/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Put the Opportunity Record Type in here</description>
    <inlineHelpText>Put the Opportunity Record Type in here</inlineHelpText>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>