unpackaged/main/default/objects/Price_Book_Selector__mdt/fields/Opportunity_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Developer_Name__c</fullName>
    <description>Use in automation as a safer reference than the record type name/label, which can get changed.</description>
    <label>Opportunity Record Type Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>