unpackaged/main/default/objects/Price_Book_Selector__mdt/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <description>Stores the actual Record ID of the Price Book this entry relates to.</description>
    <inlineHelpText>Stores the actual Record ID of the Price Book this entry relates to.</inlineHelpText>
    <label>Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>