unpackaged/main/default/objects/Price_Book_Selector__mdt/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <description>Put the name of the Price Book in this field</description>
    <inlineHelpText>Put the name of the Price Book in this field</inlineHelpText>
    <label>Price Book Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>